--- a/index.html
+++ b/index.html
@@ -1,95 +1,94 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Portugal Life Style</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-<!--===============================================================================================-->
-</head>
-<body>
-	
-			
-
-	<div class="flex-w flex-str size1 overlay1">
-		<div class="flex-w flex-col-sb wsize1 bg0 p-l-65 p-t-37 p-b-50 p-r-80 respon1">
-			<div class="wrappic1">
-				<a href="#">
-					<img src="images/icons/logo.png" alt="IMG">  <p class="m2-txt1 p-b-46">Portugal Life Style</p>
-				</a>
-			</div>		
-	
-			<div class="w-full flex-c-m p-t-80 p-b-90">
-				<div class="wsize2">
-					<h3 class="l1-txt1 p-b-34 respon3">
-						Coming Soon
-					</h3>
-
-					<p class="m2-txt1 p-b-36">
-						Hi, I am Orlando Pedrazzoli <br>
-						I would like to show you the most beautiful places in Portugal.<br>
-						One of things I love most is how we can have beach, landscape and a beautiful old and new town in a very short distance between each other. Besides, the gastronomy is stunning!<br>
-						I really love Portugal and I want to show you why! <br>
-						Fell free to contact me by email, cellphone or instagram.<br> </p>
-						 <p> <a style="color:#fff;" href="mailto:portugaldriver@gmail.com">portugaldriver@gmail.com</a>
-						</a> 
-						<br>
-						<a style="color:#fff;" href="tel:+351912164220">+351 912 164 220</a>
-					</br>
-					</p>
-
-					
-				</div>
-			</div>
-			
-			<div class="flex-w">
-				<a href="https://www.instagram.com/portugalifestyle/" target="blank"class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
-					<i class="fa fa-instagram"></i>
-				</a>
-
-			</div>
-		</div>
-			
-
-		<div class="wsize1 simpleslide100-parent respon2">
-			<!--  -->
-			<div class="simpleslide100">
-				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg01.jpg');"></div>
-				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg02.jpg');"></div>
-				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg03.jpg');"></div>
-			</div>
-		</div>
-	</div>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+    <title>Portugal Life Style</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--===============================================================================================-->	
+    <link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="css/util.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <!--===============================================================================================-->
+    </head>
+    <body>
 
 
 
-	
+    <div class="flex-w flex-str size1 overlay1">
+    <div class="flex-w flex-col-sb wsize1 bg0 p-l-65 p-t-37 p-b-50 p-r-80 respon1">
+    <div class="wrappic1">
+    <a href="#">
+    <img src="images/icons/logo.png" alt="IMG">  <p class="m2-txt1 p-b-46">Portugal Life Style</p>
+    </a>
+    </div>		
 
-<!--===============================================================================================-->	
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/tilt/tilt.jquery.min.js"></script>
-<!--===============================================================================================-->
-	<script src="js/main.js"></script>
+    <div class="w-full flex-c-m p-t-80 p-b-90">
+    <div class="wsize2">
+    <h3 class="l1-txt1 p-b-34 respon3">
+        Coming Soon
+    </h3>
 
-</body>
-</html>
+    <p class="m2-txt1 p-b-36">
+        Hi, I am Orlando Pedrazzoli <br>
+        I would like to show you the most beautiful places in Portugal.<br>
+        One of things I love most, is how we can have beach, landscape and a beautiful town in a very short time. Besides that, the gastronomy is stunning!<br>
+        I really love Portugal and you are going to love it too! <br>
+        Fell free to contact me by email, mobile or instagram.<br> </p>
+         <p> <a style="color:#fff;" href="mailto:portugaldriver@gmail.com">portugaldriver@gmail.com</a>
+    </p>
+        <br>
+        <a style="color:#fff;" href="tel:+351912164220">+351 912 164 220</a>
+
+
+
+    </div>
+    </div>
+
+    <div class="flex-w">
+    <a href="https://www.instagram.com/portugalifestyle/" target="blank"class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
+    <i class="fa fa-instagram"></i>
+    </a>
+
+    </div>
+    </div>
+
+
+    <div class="wsize1 simpleslide100-parent respon2">
+    <!--  -->
+    <div class="simpleslide100">
+    <div class="simpleslide100-item bg-img1" style="background-image: url('images/bg01.jpg');"></div>
+    <div class="simpleslide100-item bg-img1" style="background-image: url('images/bg02.jpg');"></div>
+    <div class="simpleslide100-item bg-img1" style="background-image: url('images/bg03.jpg');"></div>
+    </div>
+    </div>
+    </div>
+
+
+
+
+
+    <!--===============================================================================================-->	
+    <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="vendor/bootstrap/js/popper.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="vendor/select2/select2.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="vendor/tilt/tilt.jquery.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="js/main.js"></script>
+
+    </body>
+    </html>
