--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <p class="m2-txt1 p-b-36">
         Hi, I am Orlando Pedrazzoli <br>
         I would like to show you the most beautiful places in Portugal.<br>
-        One of things I love most, is how we can have beach, landscape and a beautiful town in a very short time. Besides that, the gastronomy is stunning!<br>
+        One of the things I love most, is how we can have beach, landscape and a beautiful town in a very short time. Besides that, the gastronomy is stunning!<br>
         I really love Portugal and you are going to love it too! <br>
-        Fell free to contact me by email, mobile or instagram.<br> </p>
+        Feel free to contact me by email, mobile or instagram.<br> </p>
          <p> <a style="color:#fff;" href="mailto:portugaldriver@gmail.com">portugaldriver@gmail.com</a>
     </p>
         <br>
