--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <div class="flex-w flex-str size1 overlay1">
     <div class="flex-w flex-col-sb wsize1 bg0 p-l-65 p-t-37 p-b-50 p-r-80 respon1">
     <div class="wrappic1">
-    <a href="#">
-    <img src="images/icons/logo.png" alt="IMG">  <p class="m2-txt1 p-b-46">Portugal Life Style</p>
-    </a>
+    
+    <p class="m2-txt1 p-b-46"><img src="images/icons/logo.png" alt="IMG">Portugal Life Style</p>
+
     </div>		
 
     <div class="w-full flex-c-m p-t-80 p-b-90">
