--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="w-full flex-c-m p-t-80 p-b-90">
     <div class="wsize2">
     <h3 class="l1-txt1 p-b-34 respon3">
-        Time well spent in Portugal
+        Coming soon...
     </h3>
 
     <p class="m2-txt1 p-b-36">
